syntax = "proto3";
package Need4Protocol;
import "protos/Community.proto";

message MemberList {
	repeated MemberDetails members = 1;
}

message Member {
	int32 id = 1;
	int32 user_id = 2;
	//int32 community_id = 3;
}

message MemberDetails {
	int32 member_id = 1;
	string name = 2;
	int32 status = 3;
}

message MemberInvite {
	int32 inviting_member_id = 1;
	string new_member_email = 2;
	int32 new_member_id = 3;
	int32 status = 4;
}

message MemberReport {
	int32 id = 1;
	int32 reporting_member_id = 2;
	int32 reported_member_id = 3;
	string reason = 4;
}
